--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,10 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         }
         webPort 10007
         cordapps = []
-        rpcUsers = [[ user: "user1", "password": "test", "permissions": ["StartFlow.com.flowhttp.HttpCallFlow"]]]
+        rpcUsers = [[ user: "user1", "password": "test", "permissions": [
+                "StartFlow.com.flowdb.AddTokenValueFlow",
+                "StartFlow.com.flowdb.UpdateTokenValueFlow",
+                "StartFlow.com.flowdb.QueryTokenValueFlow"
+        ]]]
     }
 }
